--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -73,8 +73,8 @@ p {
 $gray-medium-light: #eaeaea;
 
 @mixin box_sizing {
-    -moz-box-sizeing:   border-box;
-    -weblit-box-sizing: border-box;
+    -moz-box-sizing:    border-box;
+    -webkit-box-sizing: border-box;
     box-sizing:         border-box;
 }
 
