--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,3 @@
-<h1>Sign up</h1>
-
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
         <%= form_for(@user) do |f| %>
@@ -17,7 +15,7 @@
             <%= f.label :password_confirmation, "Confirmation" %>
             <%= f.password_field :password_confirmation %>
             
-            <%= f.submit "Create my account", class: "btn btn-large btn-parimary" %>
+            <%= f.submit "Update my account", class: "btn btn-large btn-parimary" %>
         <% end %>
     </div>
 </div>
