--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign up</h1>
+<h1>編集ページ</h1>
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -17,7 +17,11 @@
             <%= f.label :password_confirmation, "Confirmation" %>
             <%= f.password_field :password_confirmation %>
             
-            <%= f.submit "Create my account", class: "btn btn-large btn-parimary" %>
+            <%= f.label :region %>
+            <% @user.region = "No data" if @user.region == nil %>
+            <%= f.text_field :region %>
+            
+            <%= f.submit "Update my account", class: "btn btn-large btn-parimary" %>
         <% end %>
     </div>
 </div>
