--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
 <div class="row">
-    <div class="col-md-offset-2 col-md-2">
-        <h1>
-            <%= gravatar_for @user %>
-        </h1>
-    </div>
+    <aside class="col-md-offset-2 col-md-2">
+        <section class="user-info">
+            <h1>
+                <%= gravatar_for @user %>
+            </h1>
+        </section>
+    </aside>
     <div class="col-md-6">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -24,12 +26,12 @@
 </div>
 
 <div class="row">
-    <aside class="col-md-4">
+    <aside class="col-md-offset-2 col-md-2">
         <section class="user-info">
-            <h1>
-                <%= gravatar_for @user %>
-                <%= @user.name %>
-            </h1>
+            <h2>
+                <%= link_to "フォロー", followings_user_path(params[:id]) %>,
+                <%= link_to "フォロワー", followers_user_path(params[:id]) %>
+            </h2>
         </section>
     </aside>
     <div class="col-md-8">
